# AI_Fund_India

./: .env.example  .gitignore  .pre-commit-config.yaml  ALIGNMENT_FIXES_COMPLETE.md  ARCHITECTURE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIXES_COMPLETE.md  FIX_SUMMARY.md  FRONTEND_COMPREHENSIVE_FIX_PLAN.md  FRONTEND_FIX_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  ISSUES_AND_FIXES.md  Makefile  OVERLAP_FIX.md  PHASE_1_COMPLETE.md  PHASE_3_COMPLETE.md  PROJECT_COMPLETE.md  PROJECT_COMPLETION.md  README.md  SECTOR_MAPPING_FIX.md  TESTING_REPORT.md  TEST_PLAN.md  TEST_RESULTS.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh  start-frontend.sh  test_api_endpoints.py  test_enhanced_pages.py  test_historical_setup.py
.github/workflows/: backend-ci.yml  frontend-ci.yml  security.yml
agents/: fundamentals_agent.py  institutional_flow_agent.py  momentum_agent.py  quality_agent.py  sentiment_agent.py
api/: README.md  __init__.py  main.py
backtest_results/: backtest_20260203_112526.txt  backtest_optimized_20260203_113642.txt
core/: backtest_analyzer.py  backtest_config.py  backtester.py  cache_manager.py  config.py  data_collector.py  di_container.py  equity_curve.py  exceptions.py  market_regime_service.py  sector_benchmarks.py  stock_scorer.py
data/: README.md  backtest_db.py  base_provider.py  historical_db.optimized.py  historical_db.py  hybrid_provider.py  indian_stock_sectors.py  nifty_constituents.py  nse_provider.py  stock_universe.py  yahoo_provider.py
docs/: BACKTEST_IMPLEMENTATION_PLAN.md  README.md
docs/api/: API_DOCUMENTATION.md
docs/backtest/: BACKTEST_FINAL_RESULTS.md  BACKTEST_FIX_SUMMARY.md  BACKTEST_RESULTS_SUMMARY.md  BACKTEST_VALIDATION.md
docs/deployment/: DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  QUICK_START_VERIFICATION.md
docs/guides/: BUG_REPORT_AND_FIX_PLAN.md  FRONTEND_FIX.md  PERFORMANCE_OPTIMIZATION.md
docs/project/: CONTRIBUTING.md
docs/status/: CRITICAL_FIXES_SUMMARY.md  ENHANCEMENTS_COMPLETED.md  FINAL_STATUS.md  (+9 more)
docs_indian/: ARCHITECTURE_DIAGRAM.md  INDEX.md  INDIAN_MARKET_REPLICATION_GUIDE.md  QUICK_START_INDIAN_MARKET.md  README.md
frontend/: .env.example  .env.production  .gitignore  README.md  TESTING.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.optimized.ts  vite.config.ts  vitest.config.ts
logs/: daily.log.2026-01-31
narrative_engine/: narrative_engine.py
scripts/: analyze_logs.py  backfill_sectors.py  backup.py  cleanup.py  demo_backtest.py  explore_universe.py  health_check.py  monitor_system.py  run_backtest.py  run_nifty50_backtest.py  run_nifty50_backtest_fixed.py  run_validated_backtest.py  test_api.py  test_backtest_fixed.py  test_live_analysis.py  validate_backtest.py  validate_system.py  verify_system.py
tests/: README.md  __init__.py  conftest.py  test_agents.py  test_api.py  test_backend_comprehensive.py  test_utils.py
utils/: README.md  api_middleware.py  circuit_breaker.py  logging_config.py  math_helpers.py  metric_extraction.py  metrics.py  validation.py
(+101 files in other folders)
